# testuio

./: .gitattributes  .gitignore  .replit  cookies_b64.txt  icecast-replit.xml  main.py  pyproject.toml  replit.md  replit.nix  setup_youtube_oauth.py  start-replit.sh
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Netscape-HTTP-Cookie-File-https-curl-haxx-se-rfc-cooki_1782913424792.txt  Pasted--Netscape-HTTP-Cookie-File-https-curl-haxx-se-rfc-cooki_1783761927082.txt  Pasted--Netscape-HTTP-Cookie-File-https-curl-haxx-se-rfc-cooki_1783955791984.txt  Pasted--Prompt-Build-a-Production-Ready-Icecast-Radio-Backend-_1782885915634.txt  Pasted--logs-ffmpeg-log-api-log-2026-07-13T14-47-09-WARNING-ra_1783954246357.txt  Pasted--logs-ffmpeg-log-api-log-2026-07-13T14-49-17-INFO-rad-1_1783954256642.txt  Pasted--logs-ffmpeg-log-api-log-2026-07-13T15-08-09-INFO-rad-1_1783955642860.txt  Pasted--logs-ffmpeg-log-api-log-2026-07-16T15-39-09-WARNING-ra_1784216401638.txt  Pasted--logs-ffmpeg-log-api-log-INFO-100-64-0-20-0-GET-now-178_1783761065360.txt  Pasted--logs-ffmpeg-log-api-log-INFO-100-64-0-3-0-GET-nowp-178_1783956391570.txt  Pasted--logs-ffmpeg-log-api-log-INFO-100-64-0-8-0-GET-nowp-178_1784027530376.txt  Pasted--logs-ffmpeg-log-api-log-INFO-Started-server-process-17_1783762542005.txt  Pasted--logs-ffmpeg-log-api-log-size-4861KiB-time-00-05-11-09-_1783761826084.txt  Pasted--start-sh-yt-dlp-2024-12-13-start-sh-Starting-Uvicorn-o_1782891092642.txt  Pasted-ICECAST-HOST-localhost-ICECAST-PORT-8000-ICECAST-USER-s_1782915668311.txt  (+4 more)
radio-backend/: .env.example  .gitignore  (+14 more)
(+26 files in other folders)
