[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.6.9",
]
